# Simple-Physics

./: CMakeLists.txt  README.md  index.html
VS2022_solution/: Simple-Physics.sln  Simple-Physics.vcxproj  Simple-Physics.vcxproj.filters
Xcode_Project/Simple Physics/Simple Physics.xcodeproj/: project.pbxproj
Xcode_Project/Simple Physics/Simple Physics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode_Project/Simple Physics/Simple Physics.xcodeproj/xcshareddata/xcschemes/: Simple Physics.xcscheme
inc/: AnimatedMesh.h  Decal.h  DecalRenderer.h  GLTFLoader.h  Game.h  ModelViewerState.h  PlayState.h  Ray.h  RigidBody.h  ShaderLoader.h  SimpleMesh.h  SkeletonViewer.h  TextureLoader.h  Track.h  TrackVisualizer.h  Transform.h  Triangle.h  Wall.h  Window.h  World.h
public/: Simple-Physics.data  Simple-Physics.js  Simple-Physics.wasm  index.html
resources/models/cube/: cube.glb
resources/models/inverted_cube/: inverted_cube.glb
resources/models/inverted_icosphere/: inverted_icosphere.glb
resources/models/plane/: plane.glb  world_plane.glb
resources/shaders/: decal.frag  decal.vert  diffuse.frag  diffuse.vert  full_screen_quad_with_depth_texture_shader.frag  full_screen_quad_with_depth_texture_shader.vert  full_screen_quad_with_normal_texture_shader.frag  gourad.vert  illuminated.frag  illuminated.vert  normal_and_depth.frag  normal_and_depth.vert
scenes/: cube.blend  inverted_cube.blend  inverted_icosphere.blend  world_plane.blend
src/: AnimatedMesh.cpp  Decal.cpp  DecalRenderer.cpp  FiniteStateMachine.cpp  GLTFLoader.cpp  Game.cpp  ModelViewerState.cpp  PlayState.cpp  Quat.cpp  RigidBody.cpp  Shader.cpp  ShaderLoader.cpp  SkeletonViewer.cpp  Texture.cpp  TextureLoader.cpp  TrackVisualizer.cpp  Triangle.cpp  Wall.cpp  Window.cpp  World.cpp  main.cpp
